LDEV-4054 updating English

--- a/lams_tool_scribe/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_scribe/conf/language/lams/ApplicationResources.properties
@@ -2,16 +2,16 @@ appName = scribe
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 17:53:22 CST 2016 
  
 #=================== labels for Scribe =================# 
 
 appName  =scribe
 tool.display.name  =Scribe
-tool.description  =Scribe Tool
+tool.description  =Scribe tool
 activity.title  =Scribe
-activity.description  =Scribe Tool
-activity.helptext  =Syncronous Scribe tool
+activity.description  =Scribe tool
+activity.helptext  =Syncronous scribe tool
 pageTitle.authoring  =Scribe Authoring
 button.basic  =Basic
 button.advanced  =Advanced
@@ -19,21 +19,18 @@ label.authoring.basic.title  =Title:
 label.authoring.basic.content  =Content:
 label.authoring.basic.instructions  =Instructions:
 label.authoring.basic.heading  =Headings
-label.authoring.basic.heading.add  =Create Heading
+label.authoring.basic.heading.add  =Create heading
 advanced.lockOnFinished  =Lock when finished
 advanced.reflectOnActivity  =Add a notebook at end of Scribe with the following instructions:
-advanced.selectScribe  =Select Scribe
-advanced.firstLearner  =First Learner
+advanced.selectScribe  =Select scribe
+advanced.firstLearner  =First learner
 advanced.selectInMonitor  =Select in Monitor
-instructions.type.online  =Online
-instructions.type.offline  =Offline
-label.filename  =Filename
 label.type  =Type
 link.view  =View
 link.delete  =Delete
 link.edit  =Edit
 message.updateSuccess  =Changes saved
-pageTitle.learning  =Online Scribe
+pageTitle.learning  =Online scribe
 message.defineLaterSet  =Please wait for the instructor to complete the contents of this activity
 pageTitle.monitoring  =Scribe Monitoring
 button.summary  =Summary
@@ -43,14 +40,13 @@ titleHeading.summary  =Summary
 titleHeading.instructions  =Instructions
 titleHeading.statistics  =Statistics
 titleHeading.editActivity  =Edit Activity
-titleHeading.exportPortfolio  =Export Portfolio
 heading.group  =Group {0}:
-heading.totalLearners  =Number of Learners
-heading.totalLearnersInGroup  =Total Number of Learners in Group:
+heading.totalLearners  =Number of learners
+heading.totalLearnersInGroup  =Total number of learners in group:
 message.contentInUseSet  =Modification of content is not allowed since one or more learners has attempted the activity.
 message.summary  =There is no summary available for this tool.
-message.noHeadings  =No Headings Available
-summary.openScribe  =Open Scribe
+message.noHeadings  =No headings available
+summary.openScribe  =Open scribe
 button.send  =Send
 button.clear  =Clear
 button.cancel  =Cancel
@@ -62,47 +58,36 @@ button.continue  =Continue
 button.next  =Next
 label.save  =Save
 label.cancel  =Cancel
-error.missingParam  =Unable to continue. {0} is missing.
-error.exceedMaxFileSize  =File size exceeded
-error.exception.NbApplication  =An internal error has occured with the Scribe Tool. If reporting this error, please report: <br/> <b>{0}</b>
-error.contentrepository  =An error has occurred when saving/deleting instruction file {0}. The files may not be saved correctly.
-error.content.locked  =The content has been locked since it is being used by one or more learners. The modification of the content is not allowed.
-error.defineLater  =Sorry, the activity is not ready yet. Please wait for the instructor to finishing defining the activity.
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
-error.mandatoryField  ={0} field is mandatory.
-error.mark.invalid.number  ={0} field must be a valid number. Decimal points are not allowed.
-error.mark.invalid.decimal.number  ={0} field must be a valid decimal number.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
-pageTitle.monitoring.scribeHistory  =Scribe History
+pageTitle.monitoring.scribeHistory  =Scribe history
 button.try.again  =Try again
-pageTitle.monitoring.notebook  =Notebook Entry
+pageTitle.monitoring.notebook  =Notebook entry
 heading.numPosts  =No. of posts
 heading.learner  =Learner
-heading.reflection  =Notebook Entry
-heading.appointedScribe  =Appointed Scribe
-heading.numberOfVotes  =Number of Votes
+heading.reflection  =Notebook entry
+heading.appointedScribe  =Appointed scribe
+heading.numberOfVotes  =Number of votes
 heading.report  =Report
-heading.sessionName  =Session Name
+heading.sessionName  =Session name
 heading.reflections  =Notebook entries
-heading.selectScribe  =Select Scribe
+heading.selectScribe  =Select scribe
 message.noLearners  =No learners available
 button.agree  =Agree
-button.submitReport  =Submit Report
-button.forceComplete  =Force Complete
+button.submitReport  =Submit report
+button.forceComplete  =Force complete
 button.submit  =Add
 button.refresh  =Refresh
 message.voteStatistics  ={0} out of {1} agree
 message.scribeInstructions  ={0}, you are the scribe for your group.
 message.learnerInstructions  =You are about to enter a group discussion and report.
 advanced.showAggregatedReports  =Show aggregated reports for all groupings.
-advanced.showAggregatedReportsNote  =Note: this will only work when groups are assigned to this activity.
-heading.other.group.reports  =Other Groups
-message.confirmForceComplete  =Are you sure you want to Force Complete? If you click OK, you will not be able to change the Report text, and other Learners can no longer click Agree
+heading.other.group.reports  =Other groups
+message.confirmForceComplete  =Are you sure you want to Force complete? If you click OK, you will not be able to change the Report text, and other Learners can no longer click Agree
 label.on  =On
 label.off  =Off
 monitor.summary.th.advancedSettings  =Advanced settings
 monitor.summary.td.addNotebook  =Add a notebook at the end of Scribe
-monitor.summary.td.notebookInstructions  =Notebook Instructions
+monitor.summary.td.notebookInstructions  =Notebook instructions
 message.waitForScribe  =Please wait for the instructor to select the Scribe for this activity
 button.submitActivity  =Finish
 button.select  =Select
@@ -110,11 +95,13 @@ label.scribe.posted  =Summary text submitted by the scribe.
 label.what.others.see  =Summary text as others can see it.
 message.scribeInstructions2  =In this window you need to summarise your group's responses to the headings based on the discussion.
 message.scribeInstructions3  =The members of your group will click agree when they agree with your report. When everyone (including you) agrees, click Force Complete to continue.
-message.scribeInstructions4  =If the whole group cannot agree on the report, then you can force the activity to end by clicking "Force Complete".
+message.scribeInstructions4  =If the whole group cannot agree on the report, then you can force the activity to end by clicking "Force complete".
 message.learnerInstructions2  =You should discuss the headings with the rest of your group and your scribe, {0}, will enter the group''s findings.
 message.learnerInstructions3  =If you agree with what is written, click on the agree button.
 message.learnerInstructions4  =Every time your scribe updates the report, everyone has to click on "Agree" again. Once everyone has agreed, the Scribe will complete this activity and it cannot be changed.
-label.scribe.options=Scribe Options
-label.activity.completion=End of Activity
+label.scribe.options  =Options
+label.activity.completion  =End of activity
+advanced.showAggregatedReportsNote  =Note: this will only work when groups are assigned to this activity.
 
-#======= End labels: Exported 107 labels for en AU =====
+
+#======= End labels: Exported 96 labels for en AU =====
