LDEV-4054 updating English

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = admin
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Nov 14 16:51:05 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 18:26:41 CST 2016 
  
 #=================== labels for LAMS Administration =================# 
 
@@ -17,11 +17,8 @@ title.job.list  =Jobs
 lable.job.name  =Job name
 lable.job.start.date  =Job start date
 lable.job.description  =Job description
-errors.header  =<p class="warning">Please correct the following errors before proceeding:
-errors.footer  =</p>
-errors.prefix  =<br />
 error.system  =Oops! An unexpected exception thrown by the system. Contact your system administrator.
-error.org.invalid  =Invalid Organisation Id. {0}
+error.org.invalid  =Invalid organisation Id. {0}
 error.orgtype.invalid  =Invalid operation for this type of organisation.
 error.name.required  =Name is required.
 error.login.required  =Login is required.
@@ -36,7 +33,7 @@ error.need.sysadmin  =You need to have the sys admin role to do this.
 error.roles.empty  =You need to assign at least one role.
 error.userid.invalid  =Invalid User Id.
 error.firstname.required  =First name is required.
-error.lastname.required  =Last Name is required.
+error.lastname.required  =Last name is required.
 error.email.required  =Email address is required.
 error.valid.email.required  =Valid email address is required.
 error.required  ={0} is required.
@@ -81,8 +78,8 @@ admin.user.city  =City
 admin.user.state  =State
 admin.user.postcode  =Postcode
 admin.user.country  =Country
-admin.user.day_phone  =Day phone
-admin.user.evening_phone  =Evening phone
+admin.user.day_phone  =Work phone
+admin.user.evening_phone  =Home phone
 admin.user.mobile_phone  =Mobile phone
 admin.user.fax  =Fax
 admin.user.email  =Email
@@ -90,7 +87,7 @@ admin.user.roles  =Roles
 admin.user.manage  =Manage users
 admin.user.delete  =Delete
 admin.user.add  =Add/Remove users
-admin.user.create  =Create new user
+admin.user.create  =Create user
 admin.user.assign.roles  =Assign roles
 admin.user.find  =Find users
 admin.user.edit  =Edit user details
@@ -125,8 +122,8 @@ admin.course  =Course
 admin.class  =Subcourse
 admin.course.manage  =Manage courses
 admin.class.manage  =Manage subcourses
-admin.class.add  =Create new subcourse
-admin.course.add  =Create new course
+admin.class.add  =Create subcourse
+admin.course.add  =Create course
 admin.global.roles.manage  =Manage global roles
 admin.number  =No.
 admin.in  =In
@@ -156,7 +153,7 @@ sysadmin.userinfoUrl  =User information URL
 sysadmin.timeoutUrl  =Timeout URL
 sysadmin.integrated.servers  =integrated server(s) in total
 sysadmin.server.add  =Add new server
-sysadmin.organisation.create  =Create new one
+sysadmin.organisation.create  =Create one
 sysadmin.organisation.select  =Please select...
 sysadmin.login.logo  =Upload a new logo. Use a height of 90 pixels and width between 180 and 340 pixels for best effect:
 sysadmin.login.text  =Update the text under the logo on the login page:
@@ -200,7 +197,7 @@ msg.import.1  =In the spreadsheet, columns marked with a (*) are mandatory.
 msg.import.2  =Download the user template to create users.
 msg.import.conclusion  =Click the help icon above for more information.
 label.results.per.page  =Results per page
-admin.register.server.stats.total.users  =Total # of Users
+admin.register.server.stats.total.users  =Total # of users
 msg.import.3  =Download the roles template to add users to course/subcourse and assign their roles.
 error.user.does.not.exist  =User does not exist {0}
 msg.users.created  ={0} users were created successfully.
@@ -211,34 +208,15 @@ sysadmin.library.activity.title  =Title
 sysadmin.library.activity.description  =Description
 sysadmin.library.createtim  =Create time
 sysadmin.function  =Function
-admin.importv1.title  =Import LAMS 1 Users
-msg.importv1.1  =Download
-msg.importv1.2  =On the command line of your LAMS 1 database server, run the following command
-msg.importv1.3a  =Submit
-msg.importv1.3b  =using the form below.
-msg.importv1.4  =You will be presented with a list of organisations and session classes to import.
-label.importv1.integrated  =Include integration users and organisations
-label.continue  =Continue
-msg.importv1.found.users  =Found {0} LAMS 1 users.
-heading.importv1.users  =Users
-heading.importv1.account.organisations  =Account courses
-heading.importv1.session.classes  =Session Classes
-msg.importv1.created  =Created {0} users and {1} courses.
-msg.importv1.already.exist  =The following logins already exist
 msg.cleanup.files.deleted  ={0} files were deleted.
 msg.cleanup.warning  =Warning: calculating the size of LAMS' temporary files may incur a performance hit on your server if it hasn't been cleaned out for a while.
-label.exported.learning.designs  =exported learning designs
-label.imported.learning.designs  =imported learning designs
 label.unknown  =unknown
 msg.cleanup.actual.space  =Depending on your server's file system, the actual space occupied may differ from the above.
 msg.cleanup.recommended  =It's recommended to leave at least 1 day of temporary files in order not to remove anything that's currently in use.
 label.cleanup.delete  =Delete temporary files older than this number of days
-msg.importv1.5  =Note that the passwords of the imported users will be reset, since LAMS 2 does not accept md5 passwords.  They will be reset to the user's login.
 label.can.join.joint.lessons  =Can join joint lessons
 label.can.offer.joint.lessons  =Can offer joint lessons
 error.cant.write.login.jsp  =Couldn''t write value of {0} to {1}, please check your {2} configuration.
-msg.importv1.please.wait  =Please wait while creating new users and courses...
-msg.importv1.only.members  =Only import users that are members of organisations/session classes to be imported
 label.login.as  =Login as
 sysadmin.import.groups.title  =Import courses
 heading.import.results  =Import results
@@ -267,7 +245,7 @@ config.header.email  =Email
 config.header.uploads  =Uploaded files
 config.header.chat  =Chat server
 config.header.ldap  =LDAP
-config.header.ldap.attributes  =LDAP Attribute Mapping
+config.header.ldap.attributes  =LDAP attribute mapping
 config.header.features  =Features
 config.header.look.feel  =Look and feel
 config.header.versions  =Versions
@@ -303,11 +281,11 @@ config.allow.direct.lesson.launch  =Allow direct lesson launch
 config.community.enable  =Enable LAMS community
 config.allow.live.edit  =Allow Live Edit
 config.ldap.provisioning.enabled  =Enable provisioning
-config.ldap.provider.url  =LDAP Server URL
+config.ldap.provider.url  =LDAP server URL
 config.ldap.security.authentication  =Authentication mechanism
 config.ldap.principal.dn.prefix  =User's distinguished name prefix
 config.ldap.principal.dn.suffix  =User's distinguished name suffix
-config.ldap.security.protocol  =Security pProtocol
+config.ldap.security.protocol  =Security protocol
 config.ldap.truststore.path  =SSL certificate path
 config.ldap.truststore.password  =SSL certificate password
 config.ldap.learner.map  =Learner role map
@@ -315,7 +293,7 @@ config.ldap.monitor.map  =Monitor role map
 config.ldap.author.map  =Author role map
 config.ldap.group.admin.map  =Course Admin role map
 config.ldap.group.manager.map  =Course Manager role map
-config.ldap.update.on.login  =Update on Login
+config.ldap.update.on.login  =Update on login
 config.ldap.org.field  =Course field map
 config.ldap.only.one.org  =Only one course
 config.ldap.encrypt.password.from.browser  =Encrypt password in browser
@@ -438,7 +416,7 @@ admin.timezone.dst.offset  =DST offset (Minutes)
 admin.timezone.display.name  =Display name
 admin.user.enable.flash.for.learner.window  =Enable Flash for learner window
 admin.user.time.zone  =Time Zone
-config.show.all.my.lesson.link  =Show "All My Lessons" link in User's profile
+config.show.all.my.lesson.link  =Show "All my lessons" link in User's profile
 config.display.print.button  =Display a print button when the lesson is completed
 sysadmin.lessonFinishUrl  =Lesson finish callback URL
 admin.servertimezone.server.timezone.management  =Server timezone management
@@ -450,7 +428,7 @@ admin.servertimezone.name  =Name: {0}
 admin.servertimezone.select  =Select
 config.profile.edit.enable  =Enable profile editing
 config.profile.partial.edit.enable  =Enable partial profile editing (only email and contact number can be changed)
-config.header.kaltura  =Kaltura Settings
+config.header.kaltura  =Kaltura settings
 config.kaltura.server  =Kaltura server URL
 config.kaltura.partner.id  =Partner Id
 config.kaltura.sub.partner.id  =Subpartner Id
@@ -514,7 +492,7 @@ server.config.title  =Server configuration
 server.monitor.title  =Server monitoring
 user.course.title  =User and course configuration
 config.site.name  =Site name
-label.create.lesson  =Create new lesson
+label.create.lesson  =Create lesson
 label.manage.tool.consumers  =Maintain LTI Tool Consumers
 label.edit.tool.consumer  =Edit tool consumer details
 label.add.tool.consumer  =Add new tool consumer
@@ -534,7 +512,7 @@ label.password.max.length  =must be less than 25 characters
 label.password.min.length  =must be at least {0} characters long
 label.password.old.must.entered  =Old password must be entered
 label.password.symbols.allowed  =Only these symbols are allowed
-label.password.restrictions  =Password must follow the restrictions shown above
+label.password.restrictions  =Password must follow the restrictions shown
 label.password.must.contain  =Password must contain
 label.password.must.ucase  =at least 1 upper case letter
 label.password.must.number  =at least 1 number
@@ -546,8 +524,9 @@ label.cleanup.preview.lesson.count  =Number of preview/all lessons:
 label.cleanup.preview.lesson.progress  =Deleting...
 error.theme.invalid  =Invalid theme
 label.theme  =Theme
-
-label.2FA.property.enable =Enable two-factor authentication
+config.default.theme  =Default theme
+label.2FA.property.enable  =Enable two-factor authentication
 sysadmin.lti.consumer.monitor.roles  =Comma-separated list of monitor roles
 
-#======= End labels: Exported 540 labels for en AU =====
+
+#======= End labels: Exported 521 labels for en AU =====
