LDEV-4054 updating English and Greek

--- a/lams_tool_task/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,14 +2,14 @@ appName = takslist
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 18:31:59 CST 2016 
  
 #=================== labels for Task List =================# 
 
 activity.title  =Task List
-activity.description  =Task List.
+activity.description  =Task List
 activity.helptext  =Going through list of tasks.
-tool.display.name  =Task List Tool
+tool.display.name  =Task List tool
 tool.description  =Tool for displaying task lisk.
 appName  =Task List
 errorPage.title  =Error page
@@ -27,7 +27,7 @@ label.authoring.basic.add.task  =Add Task
 label.authoring.basic.task.isRequired  =Required task
 label.authoring.basic.task.isCommentsAllowed  =Allow Learners to add comment(s)
 label.authoring.basic.task.isCommentsRequired  =Comment required to complete task
-label.authoring.basic.task.isFilesAllowed  =Allow Learners to add file(s)
+label.authoring.basic.task.isFilesAllowed  =Allow learners to add file(s)
 label.authoring.basic.task.isFilesRequired  =File required to complete task
 label.authoring.basic.task.isCommentsFilesAllowed  =Allow learners to add comments/files for this task
 label.authoring.basic.task.show.only.to.monitoring  =Show only to monitoring
@@ -48,13 +48,13 @@ label.authoring.advanced.reflectOnActivity  =Add a notebook at end of Task List 
 label.authoring.advance.run.content.sequentialOrder  =Tasks have to be completed in sequential order
 label.authoring.advance.minimum.number.tasks  =Minimum number of tasks to complete
 label.authoring.cancel.button  =Cancel
-label.authoring.edit.conditions.button  =Edit Conditions
+label.authoring.edit.conditions.button  =Edit conditions
 label.authoring.save.button  =Save
-label.authoring.up  =Move Up
-label.authoring.down  =Move down
-label.authoring.conditions.add.condition  =Add Condition
+label.authoring.up  =Up
+label.authoring.down  =Down
+label.authoring.conditions.add.condition  =Add condition
 label.authoring.conditions.list.title  =Conditions
-label.authoring.conditions.condition.name  =Condition Name
+label.authoring.conditions.condition.name  =Condition name
 label.authoring.conditions.order  =Order
 label.authoring.conditions.empty.condition.list  =There are no conditions
 authoring.exception  =There is a problem in task list authoring page, the reason is {0}
@@ -97,53 +97,52 @@ monitoring.tab.summary  =Summary
 monitoring.tab.statistics  =Statistics
 monitoring.tab.edit.activity  =Edit Activity
 monitoring.label.title  =Title
-monitoring.label.suggest  =Suggested By
-monitoring.label.number.learners  =Number of Learners
+monitoring.label.suggest  =Suggested by
+monitoring.label.number.learners  =Number of learners
 monitoring.label.user.loginname  =Login name
 monitoring.label.user.name  =Name
 monitoring.label.group  =Group
 label.monitoring.heading.access  =Learners list
 label.monitoring.edit.activity.edit  =Edit
-label.monitoring.summary.overall.summary  =Overall Summary
+label.monitoring.summary.overall.summary  =Overall summary
 label.monitoring.summary.user  =Learner
-label.monitoring.summary.confirm.completion  =Confirm Completion
-label.monitoring.summary.title.reflection  =Notebook Entry
-label.monitoring.summary.reflection  =Notebook Entry
-label.monitoring.tasksummary.task.summary  =Task Summary
+label.monitoring.summary.confirm.completion  =Confirm completion
+label.monitoring.summary.title.reflection  =Notebook entry
+label.monitoring.summary.reflection  =Notebook entry
+label.monitoring.tasksummary.task.summary  =Task summary
 label.monitoring.tasksummary.task.required.to.finish  =this task is required to finish this activity
 label.monitoring.tasksummary.parent.activity  =Parent task
 label.monitoring.tasksummary.comments.files.enabled  =Comments/files enabled
 label.monitoring.tasksummary.user  =Learner
 label.monitoring.tasksummary.completed  =Completed
-label.monitoring.tasksummary.time.and.date  =Time and Date
+label.monitoring.tasksummary.time.and.date  =Time and date
 label.monitoring.tasksummary.comments.files  =Comments/Files
 label.monitoring.tasksummary.comments.allowed  =Learners are allowed to add comments
 label.monitoring.tasksummary.comments.required  =Comments are required to complete the task
 label.monitoring.tasksummary.files.allowed  =Learners are allowed to add files
 label.monitoring.tasksummary.files.required  =Files are required to complete the task
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
-export.title  =Export portfolio of Task List
-label.export.reflection  =Notebook Entries
+message.monitoring.edit.activity.not.editable  =This activity is no longer editable
+label.export.reflection  =Notebook entries
 label.view  =View
 label.edit  =Edit
 label.completed  =Completed
 button.upload  =Upload
 button.add  =Add
-message.monitoring.summary.no.session  =No Session Available
+message.monitoring.summary.no.session  =No session available
 label.cancel  =Cancel
 define.later.message  =Please wait for the instructor to complete the contents of this activity.
 button.try.again  =Try again
 message.no.reflection.available  =No notebook available
 monitoring.label.access.time  =Access time
 label.continue  =Continue
-page.title.monitoring.view.reflection  =View Notebook Entry
+page.title.monitoring.view.reflection  =Notebook entries
 button.close  =Close
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 label.finished  =Next Activity
 label.finish  =Next Activity
 label.default.user.name  =Instructor
-output.desc.learner.number.of.tasks.completed  =Number of Tasks Completed
-output.desc.tool.condition  =Learner Entered Conditions
+output.desc.learner.number.of.tasks.completed  =Number of tasks completed
+output.desc.tool.condition  =Learner entered conditions
 label.on  =On
 label.off  =Off
 label.monitoring.summary.lock.when.finished  =Lock when finished: {0}
@@ -151,7 +150,7 @@ label.monitoring.summary.sequential.order  =Sequential order: {0}
 label.monitoring.summary.min.number.tasks  =Minimum number of tasks to complete: {0}
 label.monitoring.summary.allowed.contribute.tasks  =Participants are allowed to contribute tasks: {0}
 label.monitoring.summary.monitor.verification  =Monitor verification: {0}
-label.monitoring.summary.notebook.reflection  =Notebook Reflection: {0}
+label.monitoring.summary.notebook.reflection  =Notebook reflection: {0}
 planner.item.title  =Items' titles
 monitor.summary.th.advancedSettings  =Advanced settings
 monitor.summary.date.restriction  =Deadline
@@ -166,6 +165,8 @@ monitor.summary.date.restriction.removed  =Deadline has been removed
 label.submit  =Finish
 label.download  =Download
 label.confirm  =Confirm
+label.task.options  =Task options
+label.activity.completion  =End of activity
 
 
-#======= End labels: Exported 159 labels for en AU =====
+#======= End labels: Exported 161 labels for en AU =====
