LDEV-4054 updating English and Greek

--- a/lams_tool_daco/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources.properties
@@ -2,14 +2,14 @@ appName = daco
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 18:59:38 CST 2016 
  
 #=================== labels for Data Collection =================# 
 
 activity.title  =Data Collection
 activity.description  =Collecting data with custom structure.
 activity.helptext  =Asking questions with custom, limited answers.
-tool.display.name  =Data Collection Tool
+tool.display.name  =Data Collection tool
 tool.description  =Tool for collecting data.
 errorPage.title  =Error page
 errorPage.heading  =Some error occurs when handling your request
@@ -92,8 +92,6 @@ label.authoring.advanced.record.nolimit  =No limit
 label.authoring.advanced.lock.on.finished  =Lock when finished
 label.authoring.advanced.notify.onlearnerentry  =Notify instructors when a learner enters this activity
 label.authoring.advanced.notify.onrecordsubmit  =Notify instructors when a learner submits a record
-label.authoring.online.filelist  =Online file list
-label.authoring.offline.filelist  =Offline file list
 label.authoring.save.button  =Save
 message.authoring.cancel.save  =Do you want to close this window without saving?
 label.learning.title  =Data Collection Learning
@@ -142,14 +140,13 @@ message.learning.warnLockOnFinish  =Note: After you click on "Next Activity" and
 message.learning.addrecordsuccess  =The record was added successfully.
 message.learning.editrecordsuccess  =The record was updated successfully.
 message.learning.activityLocked  =The instructor has set this activity not to allow you to add any more answers after you have finished it.
-message.learning.offline  =This activity is not being done on the computer. Please see your instructor for details.
 label.monitoring.close  =Close
-title.monitoring  =LAMS Data Collection monitoring
+title.monitoring  =Data Collection monitoring
 title.monitoring.recordlist  =LAMS record list
 tab.monitoring.statistics  =Statistic
 tab.monitoring.edit.activity  =Edit Activity
-label.monitoring.fullname  =Full name
-label.monitoring.loginname  =Login name
+label.monitoring.fullname  =Name
+label.monitoring.loginname  =Login
 label.monitoring.recordcount  =Record count
 label.monitoring.notebook  =Notebook entries
 label.monitoring.notebook.view  =View
@@ -165,10 +162,10 @@ label.monitoring.group  =Group
 label.monitoring.type  =Type
 label.monitoring.title  =Title
 label.monitoring.suggest  =Suggested By
-label.monitoring.number.learners  =Number of Learners
+label.monitoring.number.learners  =Number of learners
 label.monitoring.hide  =Hide
 label.monitoring.show  =Show
-label.monitoring.user.loginname  =Login name
+label.monitoring.user.loginname  =Login
 label.monitoring.user.name  =Name
 label.monitoring.hidden  =Hidden
 label.monitoring.edit.activity.cancel  =Cancel
@@ -176,10 +173,11 @@ label.monitoring.edit.activity.update  =Update
 label.monitoring.edit.activity.edit  =Edit
 label.monitoring.user.fullname  =Name
 label.monitoring.heading.access  =Learners list
-label.monitoring.reflection.heading  =View Notebook entries
+label.monitoring.reflection.heading  =Notebook entries
 message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
 message.monitoring.summary.no.session  =No learners have accessed this activity.
 message.monitoring.summary.no.question.for.group  =No question available for this group.
+label.export.title  =Export portfolio of Data Collection
 label.export.reflection.heading  =Notebook entry
 error.question.desc.blank  =Description can not be blank
 error.question.file.blank  =File can not be blank.
@@ -241,7 +239,6 @@ message.authoring.delete.question  =Are you sure you want to delete this questio
 title.export.spreadsheet  =Export to file
 label.export.spreadsheet.instruction  =Please choose format which you want to export
 label.export.spreadsheet.choose.format.excel  =MS Excel
-label.export.spreadsheet.choose.format.csv  =CSV (character set: UTF-8, separator: semicolon ";")
 button.export  =Export
 label.export.spreadsheet.instruction.continue  =and press export button. After successful export you may close this window.
 label.export.file.title  =Data Collection Export
@@ -251,10 +248,10 @@ label.export.file.user  =Learner
 label.export.file.answer.date  =Added on
 label.authoring.cancel.button  =Cancel
 label.learning.submit  =Finish
-label.search=Search... 
-label.monitoring.average.number.records.heading=Average Number of Records
-label.scroll.hint=(Scroll the columns to see more records.)
-label.activity.completion=End of Activity
-label.notifications=Notifications
+label.search  =Search...
+label.monitoring.average.number.records.heading  =Average Number of Records
+label.activity.completion  =End of activity
+label.notifications  =Notifications
+
 
 #======= End labels: Exported 246 labels for en AU =====
