--- a/lams_tool_daco/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 18:59:34 CST 2016 
  
 #=================== labels for Data Collection =================# 
 
@@ -31,8 +31,6 @@ button.try.again  =\u03a0\u03c1\u03bf\u03c3\u03c0\u03ac\u03b8\u03b7\u03c3\u03b5 
 message.no.reflection.available  =\u0394\u03b5\u03bd \u03c5\u03c0\u03ac\u03c1\u03c7\u03b5\u03b9 \u03b4\u03b9\u03b1\u03b8\u03ad\u03c3\u03b9\u03bc\u03bf \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf
 define.later.message  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03c4\u03bf\u03bd \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae \u03bd\u03b1 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03c3\u03b5\u03b9 \u03c4\u03bf \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c5\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2.
 label.author.title  =\u03a3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae \u0394\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
-label.authoring.heading.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
-label.authoring.heading.instructions.desc  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b5\u03b9\u03c3\u03b1\u03b3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03bf\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03ba\u03b1\u03b9 \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 label.authoring.heading.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b1
 label.authoring.heading.advanced.description  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b5\u03b9\u03c3\u03ac\u03b3\u03b5\u03c4\u03b5 \u03c4\u03b9\u03c2 \u03c0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b5\u03c2 \u03b5\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b3\u03b9\u03b1 \u03c4\u03b7 \u03c3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae \u03b4\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
 label.authoring.heading.basic.description  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ad\u03c2 \u03c0\u03bb\u03b7\u03c1\u03bf\u03c6\u03bf\u03c1\u03af\u03b5\u03c2 \u03b5\u03b9\u03c3\u03cc\u03b4\u03bf\u03c5 \u03c4\u03b7 \u03c3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae \u03b4\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
@@ -44,7 +42,6 @@ label.authoring.basic.answeroption.add  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u0
 label.authoring.basic.answeroption.ordinal  =\u0391\u0392\u0393\u0394\u0395\u0396\u0397\u0398\u0399\u039a\u039b\u039c\u039d\u039e\u039f\u03a0\u03a1\u039f\u03a3\u03a5\u03a4\u03a5\u03a6\u03a7\u03a8\u03a9
 label.authoring.basic.answeroption.up  =\u039c\u03b5\u03c4\u03b1\u03ba\u03af\u03bd\u03b7\u03c3\u03b7 \u03a0\u03ac\u03bd\u03c9
 label.authoring.basic.answeroption.down  =\u039c\u03b5\u03c4\u03b1\u03ba\u03af\u03bd\u03b7\u03c3\u03b7 \u039a\u03ac\u03c4\u03c9
-label.authoring.basic.download  =\u039b\u03ae\u03c8\u03b7
 label.authoring.basic.question.add  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7\u03c2
 label.authoring.basic.textfield  =\u039a\u03b5\u03af\u03bc\u03b5\u03bd\u03bf \u039c\u03af\u03b1\u03c2 \u0393\u03c1\u03b1\u03bc\u03bc\u03ae\u03c2
 label.authoring.basic.textfield.add  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u03b3\u03c1\u03b1\u03bc\u03bc\u03ae\u03c2 \u03ba\u03b5\u03b9\u03bc\u03ad\u03bd\u03bf\u03c5 \u03c3\u03c4\u03b7\u03bd \u03b5\u03c1\u03ce\u03c4\u03b7\u03c3\u03b7
@@ -95,15 +92,6 @@ label.authoring.advanced.record.nolimit  =\u039a\u03b1\u03bd\u03ad\u03bd\u03b1 \
 label.authoring.advanced.lock.on.finished  =\u039d\u03b1 \u03ba\u03bb\u03b5\u03b9\u03b4\u03c9\u03b8\u03b5\u03af \u03cc\u03c4\u03b1\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03c9\u03b8\u03b5\u03af
 label.authoring.advanced.notify.onlearnerentry  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03c4\u03b5 \u03c4\u03bf\u03c5\u03c2 \u03b5\u03c0\u03cc\u03c0\u03c4\u03b5\u03c2 \u03c0\u03cc\u03c4\u03b5 \u03ad\u03bd\u03b1\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2 \u03b5\u03b9\u03c3\u03ad\u03c1\u03c7\u03b5\u03c4\u03b1\u03b9 \u03c3\u03b5 \u03b1\u03c5\u03c4\u03ae \u03c4\u03b7\u03bd \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1
 label.authoring.advanced.notify.onrecordsubmit  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03c4\u03b5 \u03c4\u03bf\u03c5\u03c2 \u03b5\u03c0\u03cc\u03c0\u03c4\u03b5\u03c2 \u03c0\u03cc\u03c4\u03b5 \u03ad\u03bd\u03b1\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2 \u03c5\u03c0\u03bf\u03b2\u03ac\u03bb\u03b5\u03b9 \u03bc\u03af\u03b1 \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae
-label.authoring.online.instruction  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03bc\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-label.authoring.online.file  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-label.authoring.online.filelist  =\u039b\u03af\u03c3\u03c4\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03c9\u03bd \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-label.authoring.online.upload  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae  \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7 (on line)
-label.authoring.offline.file  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03b3\u03b9\u03b1 \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-label.authoring.offline.instruction  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-label.authoring.offline.filelist  =\u039b\u03af\u03c3\u03c4\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03c9\u03bd \u03b3\u03b9\u03b1 \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-label.authoring.offline.upload  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae  \u0391\u03c1\u03c7\u03b5\u03af\u03c9\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-label.authoring.choosefile.button  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf
 label.authoring.save.button  =\u0391\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7
 message.authoring.cancel.save  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03bb\u03b5\u03af\u03c3\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7;
 label.learning.title  =\u039c\u03ac\u03b8\u03b7\u03c3\u03b7 \u03a3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u0394\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
@@ -152,12 +140,10 @@ message.learning.warnLockOnFinish  =\u0391\u03c6\u03cc\u03c4\u03bf\u03c5 \u03ba\
 message.learning.addrecordsuccess  =\u0397 \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u03c0\u03c1\u03bf\u03c3\u03c4\u03ad\u03b8\u03b7\u03ba\u03b5 \u03b5\u03c0\u03b9\u03c4\u03c5\u03c7\u03ce\u03c2
 message.learning.editrecordsuccess  =\u0397 \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u03b5\u03bd\u03b7\u03bc\u03b5\u03c1\u03ce\u03b8\u03b7\u03ba\u03b5 \u03b5\u03c0\u03b9\u03c4\u03c5\u03c7\u03ce\u03c2
 message.learning.activityLocked  =\u039f \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03c4\u03ae\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03bf\u03c1\u03af\u03c3\u03b5\u03b9 \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03bd\u03b1 \u03bc\u03b7\u03bd \u03c3\u03b1\u03c2 \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c8\u03b5\u03b9 \u03bd\u03b1 \u03c0\u03c1\u03bf\u03c3\u03b8\u03ad\u03c3\u03b5\u03c4\u03b5 \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03b5\u03c2 \u03b1\u03c0\u03b1\u03bd\u03c4\u03ae\u03c3\u03b5\u03b9\u03c2, \u03b1\u03c6\u03bf\u03cd \u03ad\u03c7\u03b5\u03b9 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03c9\u03b8\u03b5\u03af.
-message.learning.offline  =\u0391\u03c5\u03c4\u03ae \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b3\u03af\u03bd\u03b5\u03c4\u03b1\u03b9 \u03c3\u03c4\u03bf\u03bd \u03c5\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03c4\u03ae. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03b4\u03b5\u03af\u03c4\u03b5 \u03c4\u03bf\u03bd \u03b5\u03c0\u03bf\u03c0\u03c4\u03b7 \u03c3\u03b1\u03c2 \u03b3\u03b9\u03b1 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2.
 label.monitoring.close  =\u039a\u03bb\u03b5\u03b9\u03c3\u03c4\u03cc
 title.monitoring  =\u0395\u03c0\u03bf\u03c0\u03c4\u03b5\u03af\u03b1 \u03a3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u0394\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd LAMS
 title.monitoring.recordlist  =\u039b\u03af\u03c3\u03c4\u03b1 \u03b5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae\u03c2 LAMS
 tab.monitoring.statistics  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac
-tab.monitoring.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b1
 tab.monitoring.edit.activity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 label.monitoring.fullname  =\u03a0\u03bb\u03ae\u03c1\u03b5\u03c2 \u03cc\u03bd\u03bf\u03bc\u03b1
 label.monitoring.loginname  =\u038c\u03bd\u03bf\u03bc\u03b1 \u0395\u03b9\u03c3\u03cc\u03b4\u03bf\u03c5
@@ -185,7 +171,6 @@ label.monitoring.hidden  =\u039a\u03c1\u03c5\u03bc\u03bc\u03ad\u03bd\u03b7
 label.monitoring.edit.activity.cancel  =\u0386\u03ba\u03c5\u03c1\u03bf
 label.monitoring.edit.activity.update  =\u0395\u03bd\u03b7\u03bc\u03ad\u03c1\u03c9\u03c3\u03b7
 label.monitoring.edit.activity.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
-label.monitoring.attachments  =\u0395\u03c0\u03b9\u03c3\u03c5\u03bd\u03b1\u03c0\u03c4\u03cc\u03bc\u03b5\u03bd\u03b1
 label.monitoring.user.fullname  =\u038c\u03bd\u03bf\u03bc\u03b1
 label.monitoring.heading.access  =\u039b\u03af\u03c3\u03c4\u03b1 \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
 label.monitoring.reflection.heading  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae \u0395\u03b3\u03b3\u03c1\u03b1\u03c6\u03ce\u03bd \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf\u03c5
@@ -254,7 +239,6 @@ message.authoring.delete.question  =\u0395\u03af\u03c3\u03c4\u03b5 \u03c3\u03af\
 title.export.spreadsheet  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c3\u03b5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf
 label.export.spreadsheet.instruction  =\u0395\u03c0\u03b9\u03bb\u03ad\u03be\u03c4\u03b5 \u03c4\u03b7 \u03bc\u03bf\u03c1\u03c6\u03ae \u03c0\u03bf\u03c5 \u03b8\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03b5\u03be\u03b1\u03b3\u03ac\u03b3\u03b5\u03c4\u03b5
 label.export.spreadsheet.choose.format.excel  =MS Excel
-label.export.spreadsheet.choose.format.csv  =CSV (\u03c3\u03cd\u03bd\u03bf\u03bb\u03bf \u03c7\u03b1\u03c1\u03b1\u03ba\u03c4\u03ae\u03c1\u03c9\u03bd: UTF-8, \u03bc\u03b5 \u03b4\u03b9\u03b1\u03c7\u03c9\u03c1\u03b9\u03c3\u03c4\u03b9\u03ba\u03cc: \u03b5\u03bb\u03bb\u03b7\u03bd\u03b9\u03ba\u03cc \u03b5\u03c1\u03c9\u03c4\u03b7\u03bc\u03b1\u03c4\u03b9\u03ba\u03cc ";")
 button.export  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae
 label.export.spreadsheet.instruction.continue  =\u03ba\u03b1\u03b9 \u03c0\u03b1\u03c4\u03ae\u03c3\u03c4\u03b5 \u03c4\u03bf \u03ba\u03bf\u03c5\u03bc\u03c0\u03af \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae. \u039c\u03b5\u03c4\u03ac \u03c4\u03b7\u03bd \u03b5\u03c0\u03b9\u03c4\u03c5\u03c7\u03ae \u03b5\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03bc\u03c0\u03bf\u03c1\u03b5\u03af\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03bb\u03b5\u03af\u03c3\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03cc \u03c4\u03bf \u03c0\u03b1\u03c1\u03ac\u03b8\u03c5\u03c1\u03bf.
 label.export.file.title  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03a3\u03c5\u03bb\u03bb\u03bf\u03b3\u03ae\u03c2 \u0394\u03b5\u03b4\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd
@@ -263,6 +247,11 @@ label.export.file.sheet  =\u03a0\u03b5\u03c1\u03b9\u03b5\u03c7\u03bf\u03bc\u03ad
 label.export.file.user  =\u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c2
 label.export.file.answer.date  =\u03a0\u03c1\u03bf\u03c3\u03c4\u03ad\u03b8\u03b7\u03ba\u03b5 \u03c3\u03c4\u03bf
 label.authoring.cancel.button  =\u0391\u03ba\u03cd\u03c1\u03c9\u03c3\u03b7
+label.learning.submit  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
+label.search  =\u0391\u03bd\u03b1\u03b6\u03ae\u03c4\u03b7\u03c3\u03b7...
+label.monitoring.average.number.records.heading  =\u039c\u03ad\u03c3\u03bf\u03c2 \u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u0395\u03b3\u03b3\u03c1\u03b1\u03c6\u03ce\u03bd
+label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
+label.notifications  =\u0395\u03b9\u03b4\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03b5\u03b9\u03c2
 
 
-#======= End labels: Exported 257 labels for el GR =====
+#======= End labels: Exported 246 labels for el GR =====
